--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,33 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: right;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.47, 1.48, 0.57, 1.15);
     }
 
   </style>
 
   <script>
 
+  const secondHand = document.querySelector('.second-hand');
+  const minuteHand = document.querySelector('.min-hand');
+  const hourHand = document.querySelector('.hour-hand');
+
+
+  const setTime = function () {
+    const now = new Date();
+    const seconds = now.getSeconds();
+    const minutes = now.getMinutes();
+    const hours = now.getHours();
+
+    secondHand.style.transform = `rotate(${seconds / 60 * 360 + 90}deg)`;
+    minuteHand.style.transform = `rotate(${minutes / 60 * 360 + 90}deg)`;
+    hourHand.style.transform = `rotate(${hours / 12 * 360 + 90}deg)`;
+  }
+
+  setInterval(setTime, 1000);
 
   </script>
 </body>
