--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,29 +31,40 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen = inventors.filter(({year}) => year >= 1500 && year < 1600);
+    console.log(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-
+    const fullNames = inventors.map(({first, last}) => `${first} ${last}`);
+    console.log(fullNames);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    const ordered = inventors.sort((a, b) => a.year > b.year ? 1 : -1);
+    console.table(ordered);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-
+    const totalYears = inventors.reduce((a, i) => a + i.passed - i.year, 0);
+    console.log(totalYears);
     // 5. Sort the inventors by years lived
-
+    const oldest = inventors.sort((a, b) => a.passed - a.year > b.passed - b.year ? -1 : 1);
+    console.log(oldest);
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
-
+    // const category = document.querySelector('.mw-category');
+    // const links = category.querySelectorAll('a');
+    // const de = [...links].map(x => x.textContent).filter(x => x.split('de').length > 1);
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    const alpha = people.map(x => x.split(', ')).sort((a, b) => a[0] > b[0] ? 1 : -1).map(x => x.join(', '));
+    console.table(alpha);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    const transportation = data.reduce((a, i) => ({
+      ...a,
+      [i]: 1 + (a[i] ? a[i] : 0),
+    }), {});
+    console.table(transportation);
   </script>
 </body>
 </html>
