--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -15,7 +15,59 @@
     </ul>
   </form>
 <script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+  const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+  const cities = [];
+
+  fetch(endpoint)
+    .then((blob) => blob.json())
+    .then(data => cities.push(...data));
+
+  const findMatches = (wordToMatch, cities) => cities.filter(({city, state}) => {
+    const regex = new RegExp(wordToMatch, 'gi');
+
+    return city.match(regex) || state.match(regex);
+  });
+
+  const numberWithCommas = function (num) {
+    let withCommas = '';
+    num = num.toString();
+    let count = 0;
+
+    for (let i = num.length - 1; i >= 0; i--) {
+      count++;
+      if (count === 4) {
+        withCommas = ',' + withCommas;
+        count = 1;
+      }
+      withCommas = num[i] + withCommas;
+    }
+
+    return withCommas;
+  }
+
+  const displayMatches = function () {
+    const regex = new RegExp(this.value, 'gi');
+
+    suggestions.innerHTML = findMatches(this.value, cities).map(place => {
+      const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+      const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+
+      return `
+        <li>
+          <span class="name">${cityName}, ${stateName}</span>
+          <span class="population">${numberWithCommas(place.population)}</span>
+        </li>`
+    }).join``;
+
+  }
+
+
+  const searchInput = document.querySelector('.search');
+  const suggestions = document.querySelector('.suggestions');
+
+  searchInput.addEventListener('change', displayMatches);
+  searchInput.addEventListener('keyup', displayMatches);
 
 </script>
   </body>
