--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,27 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const hasAdult = people.some(x => (new Date().getFullYear()) - x.year >= 19);
+    console.log({hasAdult});
     // Array.prototype.every() // is everyone 19 or older?
-
+    const allAdult = people.every(x => (new Date().getFullYear()) - x.year >= 19);
+    console.log({allAdult});
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
+    const comment = comments.find(x => x.id === 823423);
+    console.log(comment);
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const i = comments.findIndex(x => x.id === 823423);
+
+    const newComment = [
+      ...comments.slice(0, i),
+      ...comments.slice(i + 1),
+    ];
+
+    console.log({newComment});
 
   </script>
 </body>
